# NOC-Algorithm

./: README.md  implementation_solution.md  optimization_report.md  pyproject.toml
src/noccore/: __init__.py  api.py
src/noccore/alert_layer/: __init__.py  notifier.py  policy.py  suppressor.py
src/noccore/config/: __init__.py  metric_registry.py  settings.py
src/noccore/data_layer/: __init__.py  downsample.py  eligibility.py  repair.py  router.py  validator.py
src/noccore/detect_layer/: __init__.py  confidence.py  global_detector.py  local_detectors.py  periodic_filter.py
src/noccore/feature_layer/: __init__.py  calendar_provider.py  feature_service.py
src/noccore/history_layer/: __init__.py  store.py
src/noccore/model_layer/: __init__.py  minute_huber.py  model_store.py  seasonal_adjustment.py  trainer.py
src/noccore/pipeline/: __init__.py  online_pipeline.py  replay_pipeline.py
src/noccore/schemas/: __init__.py  alert.py  anomaly.py  metric.py  prediction.py
src/noccore/utils/: stats.py  time.py
tests/unit/: test_replay_pipeline.py
