[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "noccore"
version = "0.1.0"
description = "Order payment monitoring algorithm for NOC and AIOps use cases."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]
full = [
  "pandas>=2.0",
  "scipy>=1.10",
  "scikit-learn>=1.3",
  "fastapi>=0.110",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
